[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "leakshield"
version = "0.1.0"
description = "Command line and Streamlit tool for detecting sensitive data leaks in documents."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "pandas",
    "pdfplumber",
    "python-docx",
    "pillow",
    "openpyxl",
    "python-pptx",
    "extract-msg",
    "pytesseract",
]

[project.scripts]
leakshield = "leakshield_cli:main"

[tool.setuptools]
py-modules = ["app", "leakshield_core", "leakshield_cli"]
